--- a/项目管理软技术/项目合作伙伴管理/项目合作伙伴模式管理.md
+++ b/项目管理软技术/项目合作伙伴管理/项目合作伙伴模式管理.md
@@ -2,9 +2,35 @@
 
 ## 项目合作伙伴组织结构
 
+### 基本原则
+
+- 共同目标原则
+- 高效原则
+- 权责一致原则
+- 自愿型原则
+
+#### 共同目标原则
+
+共同目标原则
+
+#### 高效原则
+
+- 组建项目合作伙伴组织的目的之二是为了实现最高的工作效率和最好的成本效益。
+- 要实现这些目的，对组织结构和相关人员的配置和安排都必须达到 **“适其位尽其用”**。
+
+#### 权责一致原则
+
+保证项目合作伙伴组织效益的前提，是一定程度的**权力下放**，各种指 令关系清晰明了，使得承担相应责任的人也能对等的拥有相应的权力。
+
+#### 自愿型原则
+
+自愿性原则实际上是组建项目合作伙伴关系组织时的一条**最基本的原则**。
+
+### 项目合作伙伴组织结构
+
 TODO 此处可插图
 
-### 合作伙伴关系咨询顾问
+#### 合作伙伴关系咨询顾问
 
 > 考点：合作伙伴关系咨询顾问属于哪一方（都不属于）
 
@@ -12,7 +38,7 @@ TODO 此处可插图
 - 是一个所有**参与者都认可的、独立的一方**，他作为项目合作伙伴模式执行过程中的发起者，要把握全局，负责组织和管理合作伙伴关系，协调并控制合作伙伴模式进程。
 - 一个合格的合作伙伴关系咨询顾问，能够将项目合作伙伴模式**顺利的启动和运行**。
 
-### 核心小组
+#### 核心小组
 
 - 项目合作伙伴关系**协定中规定的**、由**相关人员**组成的工作小组。
 - 核心小组的成员来自项目的各个参与方，**由各参与方的人员组成**。
@@ -22,12 +48,16 @@ TODO 此处可插图
 
 ### 项目合作伙伴选择原则
 
+> 口诀：核成本 捷风险
+
 1. **核心竞争能力原则**。
 2. **总成本优化原则**。
 3. **敏捷性原则**。
 4. **风险最小化原则**。
 
 #### 核心竞争能力原则
+
+> **核心竞争力**是**第一原则**
 
 源于各合作企业核心竞争能力的互补性和集成性。因此，**核心竞争能力应该成为项目合作伙伴 选择的第一原则**。
 
@@ -54,3 +84,22 @@ TODO 此处可插图
 3. **结束再激活**
 
 ### 形成阶段
+
+1. 确定是否采用合作伙伴模式。应确认项目的特点和使用合作伙伴投式能否带来期望的效果，并非所有的项目都适合合作伙伴模式的应用。
+2. 确定合作伙伴模式如何实施。当确定采用合作伙伴模式后，项目参与各方要确定各自参与合作伙伴模式实施的人员，并确定各方应如何支持合作伙伴模式的实施。
+3. 准备及召开合作伙伴会议。
+   > ①一方面是要使业主和承包商的关键项目负责人熟悉合作伙伴;
+   > ②另一方面是要明确双方对于项目的共同目标和实施方法。
+
+### 应用阶段
+
+1. 在合作伙伴协议签订后要建立**争议处理小组**、**项目评估小组**和**工作小组**，这三个小组均由 项目参与各方**共同组成**。
+   > 1.争议处理系统负责人负责建立并实施项目的争议处理系统;
+   > 2.项目评价系统的负责人负责建立并实施项目周期性的评价系统;
+   > 3.工作小组对整个项目的具体实施和进展负责。
+
+2. 在合作伙伴的实施过程中要**定期召开检讨会**，一方面要不断**改善工作**，另一方面**继续建设团队**。
+
+### 结束及再激活阶段
+
+这一阶段的重要工作是召开**总结检讨会**，总结项目实施的表现，**把经验存档**作为下一个项目的参考。
