--- a/项目管理软技术/项目合作伙伴管理/项目合作伙伴模式管理.md
+++ b/项目管理软技术/项目合作伙伴管理/项目合作伙伴模式管理.md
@@ -4,6 +4,8 @@
 
 ### 基本原则
 
+> 速记：**一目**望**高原**
+
 - 共同目标原则
 - 高效原则
 - 权责一致原则
@@ -48,7 +50,7 @@ TODO 此处可插图
 
 ### 项目合作伙伴选择原则
 
-> 口诀：核成本 捷风险
+> 速记：**核成本 捷风险**
 
 1. **核心竞争能力原则**。
 2. **总成本优化原则**。
